# aiogram_album_handler

./: .gitignore  README.md  album.py  pyproject.toml  requirements.txt
example/: album.py
