[tool.poetry]
name = "aiogram_album_handler"
version = "1.0.0"
description = "A way of handling media groups in aiogram."
authors = ["Daniil Kovalenko <lisen1510@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = { git = "https://github.com/aiogram/aiogram.git", branch = "dev-2.x" }

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
