[tool.poetry]
name = "aiogram_album_handler"
version = "2.0.0"
description = "A way of handling media groups in aiogram 3.0."
authors = []

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^3.0.0b6"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99
known_third_party = ["aiogram"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
